<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/renombrar"
        android:title="@string/renombrar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/copiar"
        android:title="@string/copiar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/cortar"
        android:title="@string/cortar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/eliminar"
        android:title="@string/eliminar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/mover"
        android:title="@string/mover"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>