<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompararPlanetas"
    android:stretchColumns="*">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compara_planetas"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <AutoCompleteTextView
                android:id="@+id/Planeta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <AutoCompleteTextView
                android:id="@+id/Planeta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/Diametro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diametro"
                android:layout_span="2"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/Distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia_al_sol"
                android:layout_span="2"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/Densidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/densidad"
                android:layout_span="2"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</TableLayout>
